# svg2plan

./: .coverage  .env  .gitignore  README.md  groceries.ipynb  py_init.py  pyproject.toml  svg2plan.code-workspace
_notebooks/: t01_svg.ipynb  t02_problem_areas.ipynb  t03_sequence.ipynb  t04_sideholes.ipynb  t05_clean_up.ipynb  t05_clean_up_sides.ipynb  t06_connectivity.ipynb  t07_dimensions.ipynb  t08_dimensions_for_corrections.ipynb  t09_windows_and_doors.ipynb  t10_dimensions2.ipynb  t11_saving_dims.ipynb  t13_tests.ipynb  text.txt
_notebooks/init_nbs/: t01_svg.ipynb  t03_sequence.ipynb  t06_connectivity.ipynb  t09_windows_and_doors.ipynb  t10_dimensions2.ipynb  t12_full_run.ipynb  t13_tests.ipynb
_notebooks/robustness_nbs/: t1_placement_options.ipynb
_notebooks/stage_2_nbs/: __init__.py  t1_placement_options.ipynb  t2_run_through1.0.ipynb  t2_scraps.ipynb  t2_subplots.ipynb  t3_run_through.ipynb  t3_scraps.ipynb  test_layout.pickle
_notebooks/svg/: t01_svg.ipynb
_scripts/: adjacency.py  cardinal_adjacency.py  directed_adjacency.py  main.py  positioned_graph.py  svg_reader.py
_scripts/actions/: actions.py  details.py  interfaces.py  operations.py  results_log.py  selection.py
archived_tests/: test_placement2.py
intermediate_solutions/: 1001_amber_c_ag.pickle  1012_good_layout.pickle  None.pickle  amber.pickle  amber_a_placed.pickle  correct_dims.pickle  diagonal_hole.pickle  dimensioned_placement.pickle  dimensioned_sol.pickle  dining_squeeze_sidehole.pickle  fake_side_holes.pickle  leveled_sides.pickle  near_solution.pickle  no squeeze.pickle  overlap_1011.pickle  overlap_fix.pickle  overlap_res_or_no.pickle  two_holes.pickle
plan_details/: amber_building.json
src/: __init__.py
tests/: domains_setup.py  test_actions.py  test_adjacency.py  test_corners.py  test_fixer.py  test_placement.py  test_reader.py  test_svg2plan.py  test_svg_reader.py
(+252 files in other folders)
