[project]
name = "svg2plan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "bpython>=0.25",
    "colored-traceback>=0.4.2",
    "networkx>=3.4.2",
    "plotly>=6.0.0",
    "pyprojroot>=0.3.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "shapely>=2.0.7",
    "typer>=0.15.1",
]

[project.scripts]
svg2plan = "svg2plan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
