[project]
name = "svg2plan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "beaupy>=3.10.1",
    "bpython>=0.25",
    "colored-traceback>=0.4.2",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "pint>=0.24.4",
    "plotly>=6.0.0",
    "pyprojroot>=0.3.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
    "typer>=0.15.1",
]

[project.scripts]
svg2plan = "svg2plan:main"
svg2plan-cli = "svg2plan.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
